Changes to Python file so plots are not cleaned up.

--- a/LinEnc.ipynb
+++ b/LinEnc.ipynb
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "dfe025f5-2cbb-4911-9f0f-4c77d0072b97",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1326de8be63f4a55a4dfe03bf587c400",
+       "model_id": "7f7f058a0d194a2db2519710afd69a6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,7 +46,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83a3940d36a64860ac442ae635b2a6f5",
+       "model_id": "90f446ac9a774abf8f736b3e7721c1ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,7 +71,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e48ecd1c278b48e0a97872e58beb1dae",
+       "model_id": "7b282a7af04a4fdebd307c55da3baddb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -146,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "112e42a7-fd06-4961-ad6c-43b7c7c8b563",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(0, 3):\n",
-    "    plt.clf()\n",
-    "    plt.close()"
+    "# for i in range(0, 3):\n",
+    "#     plt.clf()\n",
+    "#     plt.close()"
    ]
   }
  ],
